# amux

./: .gitignore  README.md  REVIEW.md  pyproject.toml
.github/workflows/: ci.yml
docs/: review-agent-ui-proposal.md
docs/design/: phase-b.md
docs/evaluation/: ai-agent-infrastructure-review.md  claude-code-proxy-evaluation.md  litellm-deep-dive.md
src/amux/: cli.py  daemon.py  paths.py  resync.py  state.py  tmux.py  tmux_target.py
tests/: test_daemon_helpers.py  test_output_discard.py  test_paths.py  test_resync_edge_cases.py  test_resync_parse.py  test_state.py  test_tmux_parser.py  test_tmux_parser_edge_cases.py  test_tmux_target.py  test_tmux_timeout.py
