[project]
name = "amux"
version = "0.1.0"
description = "agent-aware tmux sidecar daemon + CLI"
readme = "README.md"
authors = [
    { name = "moregatest", email = "twe.alexander@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "rich>=14.3.3",
    "typer>=0.24.0",
]

[project.scripts]
amux = "amux.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
